--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ app/__pycache__/ev_stations_api_service.cpython-311.pyc
 app/__pycache__/main.cpython-311.pyc
 app/__pycache__/main.cpython-311.pyc
 app/__pycache__/main.cpython-311.pyc
+app/__pycache__/cng_api_service.cpython-311.pyc
+app/__pycache__/low_fuel_api_service.cpython-311.pyc
+app/__pycache__/main.cpython-311.pyc
+app/__pycache__/token_api_service.cpython-311.pyc
+app/__pycache__/users_api_service.cpython-311.pyc
+app/__pycache__/cng_api_service.cpython-311.pyc
+app/__pycache__/main.cpython-311.pyc
