--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ app/__pycache__/token_api_service.cpython-311.pyc
 app/__pycache__/users_api_service.cpython-311.pyc
 app/__pycache__/cng_api_service.cpython-311.pyc
 app/__pycache__/main.cpython-311.pyc
+app/__pycache__/cng_api_service.cpython-311.pyc
+app/__pycache__/cng_api_service.cpython-311.pyc
+app/__pycache__/main.cpython-311.pyc
