added cng data in db

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ app/__pycache__/main.cpython-311.pyc
 app/__pycache__/cng_api_service.cpython-311.pyc
 app/__pycache__/cng_api_service.cpython-311.pyc
 app/__pycache__/main.cpython-311.pyc
+app/services/__pycache__/low_fuel_api_service.cpython-311.pyc
+app/services/__pycache__/toll_plaza_api_service.cpython-311.pyc
