--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-app/__pycache__/ev_stations_api_service.cpython-311.pyc
+app/__pycache__/*
 app/__pycache__/main.cpython-311.pyc
 app/__pycache__/main.cpython-311.pyc
 app/__pycache__/main.cpython-311.pyc
