--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ app/__pycache__/main.cpython-311.pyc
 app/services/__pycache__/low_fuel_api_service.cpython-311.pyc
 app/services/__pycache__/toll_plaza_api_service.cpython-311.pyc
 app/services/__pycache__/token_api_service.cpython-311.pyc
+app/services/__pycache__/token_api_service.cpython-311.pyc
+app/services/__pycache__/users_api_service.cpython-311.pyc
