updated user registration to return token and record

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ app/services/__pycache__/toll_plaza_api_service.cpython-311.pyc
 app/services/__pycache__/token_api_service.cpython-311.pyc
 app/services/__pycache__/token_api_service.cpython-311.pyc
 app/services/__pycache__/users_api_service.cpython-311.pyc
+app/services/__pycache__/users_api_service.cpython-311.pyc
