--- a/app/.env
+++ b/app/.env
@@ -1,4 +1,4 @@
-# API_ENCRYPTION_KEY=8efJqo4xHEu7oMpTMyIufaQyHS
 JWT_SECRET_KEY=8efJqo4xHEu7oMpTMyIufaQyHS
+GOOGLE_API_KEY=AIzaSyBBgZATqp-TE3cTtK6F7J8Q7zXm7Z4ueV8 
 ACCESS_TOKEN_EXPIRY_HOURS=1
 REFRESH_TOKEN_EXPIRY_DAYS=1
